[gd_scene load_steps=6 format=3 uid="uid://boc4hpovwawdr"]

[ext_resource type="Script" path="res://terror_function_left.gd" id="1_0gwiv"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_a7qya"]
[ext_resource type="Texture2D" uid="uid://cgbaou1iu5sff" path="res://sprites/bedroom items/Right/book_right #1 (mid).png" id="3_cilrf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dq7s"]
size = Vector2(8, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86cl7"]
shader = ExtResource("2_a7qya")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="book_right #1 (mid)" type="Area2D"]
script = ExtResource("1_0gwiv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -5)
shape = SubResource("RectangleShape2D_3dq7s")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_86cl7")
texture = ExtResource("3_cilrf")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
