[gd_scene load_steps=6 format=3 uid="uid://s73wi850m606"]

[ext_resource type="Script" path="res://terror_function_left.gd" id="1_vuugx"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_eq3q1"]
[ext_resource type="Texture2D" uid="uid://cx5d0qf34phgc" path="res://sprites/bedroom items/Right/painting_right #3.png" id="3_8061w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5svc"]
size = Vector2(9, 7.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7aso2"]
shader = ExtResource("2_eq3q1")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="painting_right #3" type="Area2D"]
script = ExtResource("1_vuugx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -3.75)
shape = SubResource("RectangleShape2D_g5svc")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7aso2")
texture = ExtResource("3_8061w")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
