[gd_scene load_steps=6 format=3 uid="uid://h8ix38j666pa"]

[ext_resource type="Script" path="res://terror_function_left.gd" id="1_ptj3n"]
[ext_resource type="Shader" path="res://world.gdshader" id="2_m3h8w"]
[ext_resource type="Texture2D" uid="uid://yq1uyo5r6kdv" path="res://sprites/bedroom items/Right/plant_right #3.png" id="3_pedqb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_voy3f"]
size = Vector2(8, 6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_85rka"]
shader = ExtResource("2_m3h8w")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="plant_right #3" type="Area2D"]
script = ExtResource("1_ptj3n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
shape = SubResource("RectangleShape2D_voy3f")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_85rka")
texture = ExtResource("3_pedqb")

[node name="disappear_timer" type="Timer" parent="."]

[node name="replace_timer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="disappear_timer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="replace_timer" to="." method="_on_replace_timer_timeout"]
